# hello-genai

./: .coveragerc  .env.example  .gitignore  AGENTS.md  README.md  WARP.md  agent.py  agent_configuration.py  example_with_tools.py  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
adk/: README.md  __init__.py  agent.py  agent_configuration.py
agents/: __init__.py
agents/file_agent/: .env.example  __init__.py  file_agent.py
docs/: CODEBASE_MAP.md
requests/: README.md  [2967] Request - generativelanguage.googleapis.com_v1beta_models_gemini-2.5-flash:generateContent.json  [2967] Response - generativelanguage.googleapis.com_v1beta_models_gemini-2.5-flash:generateContent.json  [2969] Request - generativelanguage.googleapis.com_v1beta_models_gemini-2.5-flash:generateContent.json  [2969] Response - generativelanguage.googleapis.com_v1beta_models_gemini-2.5-flash:generateContent.json
tests/: README.md  test_decorators.py  test_file_tools.py
tools/: __init__.py  file_tools.py
utils/: __init__.py  decorators.py
