[project]
name = "hello-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=25.11.0",
    "google-genai>=1.52.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "coverage>=7.0.0",
    "pytest>=9.0.2",
    "ruff>=0.14.7",
]

[tool.bandit]
exclude_dirs = [".venv", "tests", "*/tests/*"]
